
Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).
- MO_BODYRELOCATION is now recognized as an area-usage skill.
- Don't display "level 65535" when an area-usage skill is used.

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).
- Fixed a crash when cart inventory is not available (such as during login).

Credits:
- Joseph: -1 flag support in mon_control.txt
- aputs: Support for the _monsters option in useSelf_skill, useSelf_item
  and partySkill.
- obyarou: Priority attack support for non-aggressive monsters,
  shop timeout in X-Kore bugfix (bug #49), sitAuto_idle vs
  shopAuto_open conflict fix (bug #50).
- fov: writeDataFile*() tweaks
- polokus: idRO Amatsu/Kunlun support
- Ven`Tatsu: walkable water bugfix (bug #21)
- mfr, Xeno-chan: advanced 2-2 skills support.
- Steven80s: Umbala maps and portals


==================
### 1.4.2
==================

Bugfixes:
- Re-entering a username/password works correctly now (bug #45).
- Wx/MapViewer.pm is now added to the source distribution.
- *Really* fixed the bug which causes an infinite loop if the target
  monster is not reachable.
- Don't stand still for so long after having killed a mob.
- Fix teleportAuto_search. It totally ignored other AI sequences, like
  autoBuy.


==================
### 1.4.1
==================

New features:
- idRO's new secure login keys are now supported. Set secureLogin_type to 4
  or 5, depending on your server.

New config options:
- secureLogin_requestCode
  If idRO's secure login key changes again, you don't have to modify the